# stock

./: .gitignore  PLATFORM_DETAILED_NOTES.md  README.md  SESSION_LOG.md  SUMMARY.md  pyproject.toml  requirements.txt  stock_platform_v5.puml  stock_platform_v6.puml  streamlit_app.py
.github/workflows/: backtest.yml
.streamlit/: secrets.toml.example
agents/: quant_model.py
backtest/: README.md  __init__.py  calibrate.py  nifty_baseline.py  replay.py  run_backtest.py  scorer.py  screener_history_fetcher.py  snapshot.py
backtest/results/: backtest_20260510_172646.md  backtest_20260510_174542.md  backtest_20260510_175521.md  backtest_20260510_181206.md  backtest_20260512_183740.md  backtest_20260512_183853.md  backtest_20260512_194500.md  backtest_20260514_112052.md  backtest_20260514_173821.md  backtest_20260514_201350.md  backtest_20260515_181302.md  backtest_20260517_055037.md  backtest_20260517_170456.md  (+13 more)
rules/: composite_weights.yaml  quality_weights.yaml
tests/: run_pdf_e2e.py  test_backtest_scorer.py  test_buy_quality_and_prompts.py  test_calibrate_walkforward.py  test_composite_score.py  test_direct_equity_merge.py  test_engine_monitoring.py  test_monitoring_regression.py  test_monitoring_tax_logic.py  test_point_in_time.py  test_portfolio_agents.py  test_rank_ic.py  test_rebalance_dates.py  test_repository.py  test_signal_tariff.py  test_source_health.py  test_symbol_resolution.py  test_tax_and_broker_utils.py
utils/: __init__.py  broker_parser.py  entry_calculator.py  screener_fetcher.py  signal_sources.py  symbol_resolver.py  tax_calculator.py
(+50 files in other folders)
